# couriergrey

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  couriergrey.cc  couriergrey.h  database.cc  database.h  license-header.txt  mail_processor.cc  mail_processor.h  message_processor.cc  message_processor.h  timestore.cc  timestore.h  whitelist.cc  whitelist.h  whitelist_ip.dist
m4/: Makefile.am
man/: Makefile.am  couriergrey.8.in
po/: Makevars  POTFILES.in
